--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
 <meta name="viewport" content="user-scalable = no, width = device-width, initial-scale = 1, minimal-ui">
 
-<link rel="stylesheet" href="dist/series.min.css">
+<link rel="stylesheet" href="dist/series.css">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.0/masonry.pkgd.min.js"></script>
-<script src="dist/series.min.js"></script>
+<script src="dist/series.js"></script>
 
 </head>
 
