--- a/index.html
+++ b/index.html
@@ -8,21 +8,17 @@
 <meta name="viewport" content="user-scalable = no, width = device-width, initial-scale = 1, minimal-ui">
 
 <link rel="stylesheet" href="dist/series.css">
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.0/masonry.pkgd.min.js"></script>
-<script src="dist/series.js"></script>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700&display=swap">
 
 </head>
 
 <body>
 
-<section class="global-stats"></section>
+<div id="root"></div>
 
-<div class="container">
-	<main class="series-list"></main>
-</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.12.0/umd/react.production.min.js" integrity="sha256-Ef0vObdWpkMAnxp39TYSLVS/vVUokDE8CDFnx7tjY6U=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.12.0/umd/react-dom.production.min.js" integrity="sha256-p2yuFdE8hNZsQ31Qk+s8N+Me2fL5cc6NKXOC0U9uGww=" crossorigin="anonymous"></script>
+<script src="dist/series.js"></script>
 
 </body>
 
